--- a/index.html
+++ b/index.html
@@ -285,10 +285,109 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-4">
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <label for="exampleInputName1" class="form-label">Имя</label>
+                                <input type="name" class="form-control" id="exampleInputName1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Отправить</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
-
+        <div class="card">
+            <h2 class="h2 text-center">FAQ</h2>
+            <div class="card-body text-center">
+                <p class="d-inline-flex gap-1">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
+                        Как купить?
+                    </button>
+                    &nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+                        Как доставить?
+                    </button>
+                    &nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
+                        Какая гарантия?
+                    </button>
+                </p>
+                <div class="collapse" id="collapseExample1">
+                    <div class="card card-body">
+                        Выберите нужный товар, нажмите кнопку купить, перейдите в корзину и оплатите товар.
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample2">
+                    <div class="card card-body">
+                        Оформить доставку можно во время оформления заказа.
+                    </div>
+                </div>
+                <div class="collapse" id="collapseExample3">
+                    <div class="card card-body">
+                        Гарантия на товар написана в карточке товара.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <table class="table mt-4">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Название</th>
+                <th scope="col">Цена за 1 шт.</th>
+                <th scope="col">Количество</th>
+                <th scope="col">Сумма</th>
+                <th scope="col">Статус заказа</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Телефон</td>
+                <td>10000</td>
+                <td>3</td>
+                <td>30000</td>
+                <td class="table-primary">Новый</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Телевизор</td>
+                <td>50000</td>
+                <td>2</td>
+                <td>100000</td>
+                <td class="table-warning">Обработка</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Ноутбук</td>
+                <td>100000</td>
+                <td>1</td>
+                <td>100000</td>
+                <td class="table-success">Обработан</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Планшет</td>
+                <td>30000</td>
+                <td>5</td>
+                <td>150000</td>
+                <td class="table-danger">Отмена</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
+
 
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
